using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants 
{
    public const string PLAYER = "Player";
    public const string SPRINGBOARD = "Springboard";
    public const string JUMPING = "Jumping";
    public const string FALLING = "Falling";
    public const string PUSHING = "Pushing";
    public const string PUSHABLE = "Pushable";
}
